# mini-observality

./: .gitignore  docker-compose.yml  pyproject.toml
observality/db/: __init__.py  db.py
observality/db/repositories/: __init__.py  email_events_repository.py
