[project]
name = "mini-observality"
version = "0.1.0"
description = ""
authors = [
    {name = "DevButter",email = "marknotas@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
